Выправляем структуру пакетов — 2

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.maxmoro.lgintellij
-pluginName = lg-intellij
+pluginGroup = lg.intellij
+pluginName = Listing Generator
 pluginRepositoryUrl = https://github.com/Max-Moro/lg-intellij
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
