--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.maxmoro.lgintellij</id>
-    <name>lg-intellij</name>
+    <id>lg.intellij</id>
+    <name>Listing Generator</name>
     <vendor>max-moro</vendor>
 
     <depends>com.intellij.modules.platform</depends>
@@ -9,7 +9,7 @@
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.maxmoro.lgintellij.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-        <postStartupActivity implementation="com.github.maxmoro.lgintellij.startup.MyProjectActivity" />
+        <toolWindow factoryClass="lg.intellij.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <postStartupActivity implementation="lg.intellij.startup.MyProjectActivity" />
     </extensions>
 </idea-plugin>
