--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,11 @@ pluginGroup = lg.intellij
 pluginName = Listing Generator
 pluginRepositoryUrl = https://github.com/Max-Moro/lg-intellij
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 243
+pluginSinceBuild = 241
+pluginUntilBuild = 243.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
