--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -53,6 +53,13 @@
     
     <!-- Extensions -->
     <extensions defaultExtensionNs="com.intellij">
+        <!-- Services -->
+        <!-- Application-level services -->
+        <applicationService serviceImplementation="lg.intellij.cli.CliResolver"/>
+        
+        <!-- Project-level services -->
+        <projectService serviceImplementation="lg.intellij.cli.CliExecutor"/>
+        
         <!-- Tool Window -->
         <toolWindow 
             id="Listing Generator"
@@ -60,4 +67,18 @@
             factoryClass="lg.intellij.toolWindow.LgToolWindowFactory"
             icon="icons.LgIcons.ToolWindow"/>
     </extensions>
+    
+    <!-- Actions -->
+    <actions>
+        <!-- Test action for Phase 1 CLI integration testing -->
+        <!-- Will be removed in later phases -->
+        <group id="LgTestGroup" text="Listing Generator" popup="true">
+            <action id="LgTestCli"
+                    class="lg.intellij.actions.LgTestCliAction"
+                    text="Test CLI Connection"
+                    description="Test Listing Generator CLI connection"/>
+            
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </group>
+    </actions>
 </idea-plugin>
