Фаза 2: Settings Infrastructure

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -18,5 +18,40 @@ cli.test.failure.execution=CLI execution failed (exit code {0}):\n\n{1}
 cli.test.failure.timeout=CLI execution timeout after {0}ms
 cli.test.failure.notfound=CLI not found:\n\n{0}
 cli.test.failure.unknown=Unknown error occurred
+
+# Phase 2: Settings
+settings.display.name=Listing Generator
+
+## CLI Configuration Group
+settings.group.cli=CLI Configuration
+settings.cli.path.label=CLI Path:
+settings.cli.path.browse.title=Select listing-generator Executable
+settings.cli.path.comment=Leave empty for auto-detection via PATH or managed venv
+settings.python.interpreter.label=Python Interpreter:
+settings.python.interpreter.browse.title=Select Python Interpreter
+settings.python.interpreter.comment=Used for system strategy or managed venv creation
+settings.install.strategy.label=Install Strategy:
+settings.install.strategy.comment=How to resolve listing-generator CLI
+
+## AI Integration Group
+settings.group.ai=AI Integration
+settings.ai.provider.label=AI Provider:
+settings.ai.provider.comment=Default provider for "Send to AI" action
+settings.openai.key.label=OpenAI API Key:
+settings.openai.key.comment=Stored securely via PasswordSafe
+settings.openai.key.configure=Configure
+settings.openai.key.configure.title=Configure OpenAI API Key
+settings.openai.key.configure.not.implemented=OpenAI API Key configuration will be implemented in Phase 19
+settings.openai.key.row.comment=API Key configuration will be available when OpenAI provider is selected
+
+## Editor Behavior Group
+settings.group.editor=Editor Behavior
+settings.open.editable.label=Open generated files as editable
+settings.open.editable.comment=By default, files open as read-only
+
+## Reset Button
+settings.reset.defaults=Reset to Defaults
+settings.reset.defaults.title=Reset Settings
+settings.reset.defaults.confirm=Reset all settings to default values?
 cli.test.failure.exception=Unexpected error:\n\n{0}
 cli.test.progress.title=Testing CLI Connection...
