--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,7 @@
         <!-- Services -->
         <!-- Application-level services -->
         <applicationService serviceImplementation="lg.intellij.cli.CliResolver"/>
+        <applicationService serviceImplementation="lg.intellij.services.state.LgSettingsService"/>
         
         <!-- Project-level services -->
         <projectService serviceImplementation="lg.intellij.cli.CliExecutor"/>
@@ -66,6 +67,14 @@
             anchor="right"
             factoryClass="lg.intellij.toolWindow.LgToolWindowFactory"
             icon="icons.LgIcons.ToolWindow"/>
+        
+        <!-- Settings -->
+        <applicationConfigurable 
+            parentId="tools"
+            instance="lg.intellij.settings.LgSettingsConfigurable"
+            id="lg.intellij.settings"
+            key="settings.display.name"
+            bundle="messages.LgBundle"/>
     </extensions>
     
     <!-- Actions -->
@@ -81,4 +90,11 @@
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </group>
     </actions>
+    
+    <!-- Listeners -->
+    <applicationListeners>
+        <listener 
+            topic="lg.intellij.listeners.LgSettingsChangeListener"
+            class="lg.intellij.listeners.CliResolverCacheInvalidator"/>
+    </applicationListeners>
 </idea-plugin>
