Перевод enum-значений в settings page

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -53,5 +53,18 @@ settings.open.editable.comment=By default, files open as read-only
 settings.reset.defaults=Reset to Defaults
 settings.reset.defaults.title=Reset Settings
 settings.reset.defaults.confirm=Reset all settings to default values?
+
+## Enum Display Names
+
+### InstallStrategy
+settings.install.strategy.MANAGED_VENV=Managed Virtual Environment
+settings.install.strategy.SYSTEM=System Python
+settings.install.strategy.PIPX=pipx
+
+### AiProvider
+settings.ai.provider.CLIPBOARD=Clipboard
+settings.ai.provider.JETBRAINS_AI=JetBrains AI Assistant
+settings.ai.provider.JUNIE=Junie AI
+settings.ai.provider.OPENAI_API=OpenAI API
 cli.test.failure.exception=Unexpected error:\n\n{0}
 cli.test.progress.title=Testing CLI Connection...
