Удаление мусорных фраз локализации

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -1,25 +1,9 @@
-# Tool Window
-toolwindow.stripe.title=LG
-toolwindow.control.tab=Control Panel
-toolwindow.included.tab=Included Files
-
 # Sample Messages (Phase 0 - will be replaced)
 projectService=Listing Generator service initialized for project: {0}
 randomLabel=Placeholder number: {0}
 shuffle=Test Button
 
-# Phase 1: CLI Integration
-cli.test.action.title=Test CLI Connection
-cli.test.action.description=Test Listing Generator CLI connection
-cli.test.success.title=CLI Connection Success
-cli.test.success.message=CLI Version:\n\n{0}
-cli.test.failure.title=CLI Connection Failed
-cli.test.failure.execution=CLI execution failed (exit code {0}):\n\n{1}
-cli.test.failure.timeout=CLI execution timeout after {0}ms
-cli.test.failure.notfound=CLI not found:\n\n{0}
-cli.test.failure.unknown=Unknown error occurred
-
-# Phase 2: Settings
+# Settings
 settings.display.name=Listing Generator
 
 ## CLI Configuration Group
