Фаза 3: Tool Window Structure (каркас)

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -3,6 +3,11 @@ projectService=Listing Generator service initialized for project: {0}
 randomLabel=Placeholder number: {0}
 shuffle=Test Button
 
+# Tool Window
+toolwindow.stripe.title=LG
+toolwindow.control.tab=Control Panel
+toolwindow.included.tab=Included Files
+
 # Settings
 settings.display.name=Listing Generator
 
