--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -66,7 +66,8 @@
             id="Listing Generator"
             anchor="right"
             factoryClass="lg.intellij.toolWindow.LgToolWindowFactory"
-            icon="icons.LgIcons.ToolWindow"/>
+            icon="icons.LgIcons.ToolWindow"
+            canCloseContents="false"/>
         
         <!-- Settings -->
         <applicationConfigurable 
