--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -52,3 +52,51 @@ settings.ai.provider.JUNIE=Junie AI
 settings.ai.provider.OPENAI_API=OpenAI API
 cli.test.failure.exception=Unexpected error:\n\n{0}
 cli.test.progress.title=Testing CLI Connection...
+
+# Control Panel (Phase 4)
+
+## Group Titles
+control.group.ai.contexts=AI Contexts
+control.group.adaptive.settings=Adaptive Settings
+control.group.inspect=Inspect
+control.group.tokenization=Tokenization Settings
+control.group.utilities=Utilities
+
+## Field Labels
+control.template.label=Template:
+control.section.label=Section:
+control.library.label=Library:
+control.encoder.label=Encoder:
+control.ctx.limit.label=Context Limit:
+control.mode.label=Mode:
+control.target.branch.label=Target Branch:
+control.task.placeholder=Describe current task...
+
+## Button Labels
+control.btn.send.ai=Send to AI
+control.btn.generate.context=Generate Context
+control.btn.show.context.stats=Show Context Stats
+control.btn.configure.tags=Configure Tags
+control.btn.show.included=Show Included
+control.btn.generate.listing=Generate Listing
+control.btn.show.stats=Show Stats
+control.btn.create.config=Create Starter Config
+control.btn.open.config=Open Config
+control.btn.doctor=Doctor
+control.btn.reset.cache=Reset Cache
+control.btn.settings=Settings
+control.btn.refresh=Refresh
+
+## Stub Feature Names (for notifications)
+control.stub.send.ai=Send to AI
+control.stub.generate.context=Generate Context
+control.stub.show.context.stats=Show Context Stats
+control.stub.configure.tags=Configure Tags
+control.stub.show.included=Show Included Files
+control.stub.generate.listing=Generate Listing
+control.stub.show.stats=Show Stats
+control.stub.create.config=Create Starter Config
+control.stub.open.config=Open Config
+control.stub.doctor=Doctor Diagnostics
+control.stub.reset.cache=Reset Cache
+control.stub.refresh=Refresh Catalogs
