--- a/gradle.properties
+++ b/gradle.properties
@@ -34,3 +34,6 @@ org.gradle.configuration-cache = true
 
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching = true
+
+# Instruct IntelliJ Platform Gradle Plugin (2.x) to download IntelliJ Platform sources
+org.jetbrains.intellij.platform.downloadSources=true
