Реализация текстового поля, совместимого с цветовыми темами

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -70,7 +70,7 @@ control.encoder.label=Encoder:
 control.ctx.limit.label=Context Limit:
 control.mode.label=Mode:
 control.target.branch.label=Target Branch:
-control.task.placeholder=Describe current task...
+control.task.placeholder=Describe current task
 
 ## Button Labels
 control.btn.send.ai=Send to AI
