Перенос "Unilities" в туллбар

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -86,6 +86,7 @@ control.btn.doctor=Doctor
 control.btn.reset.cache=Reset Cache
 control.btn.settings=Settings
 control.btn.refresh=Refresh
+control.btn.toggle.view=Toggle View Mode
 
 ## Stub Feature Names (for notifications)
 control.stub.send.ai=Send to AI
@@ -100,3 +101,5 @@ control.stub.open.config=Open Config
 control.stub.doctor=Doctor Diagnostics
 control.stub.reset.cache=Reset Cache
 control.stub.refresh=Refresh Catalogs
+control.stub.settings=Open Settings
+control.stub.toggle.view=Toggle View Mode
