Инспектор прикапался к верхнему регистру для поля `description`

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -96,10 +96,10 @@ control.stub.configure.tags=Configure Tags
 control.stub.show.included=Show Included Files
 control.stub.generate.listing=Generate Listing
 control.stub.show.stats=Show Stats
-control.stub.create.config=Create Starter Config
-control.stub.open.config=Open Config
-control.stub.doctor=Doctor Diagnostics
-control.stub.reset.cache=Reset Cache
-control.stub.refresh=Refresh Catalogs
-control.stub.settings=Open Settings
-control.stub.toggle.view=Toggle View Mode
+control.stub.create.config=Create starter config
+control.stub.open.config=Open config
+control.stub.doctor=Doctor diagnostics
+control.stub.reset.cache=Reset cache
+control.stub.refresh=Refresh catalogs
+control.stub.settings=Open settings
+control.stub.toggle.view=Toggle view mode
