--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -1,8 +1,3 @@
-# Sample Messages (Phase 0 - will be replaced)
-projectService=Listing Generator service initialized for project: {0}
-randomLabel=Placeholder number: {0}
-shuffle=Test Button
-
 # Tool Window
 toolwindow.stripe.title=LG
 toolwindow.control.tab=Control Panel
@@ -103,3 +98,14 @@ control.stub.reset.cache=Reset cache
 control.stub.refresh=Refresh catalogs
 control.stub.settings=Open settings
 control.stub.toggle.view=Toggle view mode
+
+# Actions
+
+## Refresh Catalogs Action
+action.refresh.progress.title=Refreshing LG Catalogs...
+action.refresh.progress.text=Reloading catalog data from CLI...
+action.refresh.progress.completed=Catalog refresh completed
+action.refresh.success.title=Catalogs refreshed
+action.refresh.success.message=Sections, contexts, and settings reloaded successfully
+action.refresh.error.title=Refresh failed
+action.refresh.error.message=Failed to reload catalog data: {0}
