Фаза 7: Generation Services Foundation

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -102,6 +102,8 @@ control.stub.toggle.view=Toggle view mode
 # Actions
 
 ## Refresh Catalogs Action
+action.refresh.text=Refresh
+action.refresh.description=Refresh catalog data from CLI
 action.refresh.progress.title=Refreshing LG Catalogs...
 action.refresh.progress.text=Reloading catalog data from CLI...
 action.refresh.progress.completed=Catalog refresh completed
@@ -109,3 +111,22 @@ action.refresh.success.title=Catalogs refreshed
 action.refresh.success.message=Sections, contexts, and settings reloaded successfully
 action.refresh.error.title=Refresh failed
 action.refresh.error.message=Failed to reload catalog data: {0}
+
+## Generate Listing Action
+action.generate.listing.text=Generate Listing
+action.generate.listing.description=Generate listing for selected section
+action.generate.listing.progress=Generating Listing — {0}
+action.generate.listing.progress.text=Generating listing for section ''{0}''...
+
+## Generate Context Action
+action.generate.context.text=Generate Context
+action.generate.context.description=Generate context for selected template
+action.generate.context.progress=Generating Context — {0}
+action.generate.context.progress.text=Generating context for template ''{0}''...
+
+# Dialogs
+
+## Output Preview Dialog
+dialog.output.action.copy=Copy to Clipboard
+dialog.output.listing.title=Listing — {0}
+dialog.output.context.title=Context — {0}
