Фаза 9: Statistics Dialog (базовая версия)

--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -99,6 +99,23 @@ control.stub.refresh=Refresh catalogs
 control.stub.settings=Open settings
 control.stub.toggle.view=Toggle view mode
 
+# Stats Dialog
+
+## Labels
+stats.filter.label=Filter:
+stats.files.label=Files
+
+## Summary Cards
+stats.summary.source.title=Source Data
+stats.summary.processed.title=Processed Data
+stats.summary.rendered.title=Rendered Data
+stats.summary.final.title=Final Rendered
+stats.summary.template.title=Template Overhead
+
+## Collapsible Sections
+stats.adapter.metrics.title=Adapter Metrics
+stats.raw.json.title=Raw JSON
+
 # Actions
 
 ## Refresh Catalogs Action
@@ -124,9 +141,12 @@ action.generate.context.description=Generate context for selected template
 action.generate.context.progress=Generating Context — {0}
 action.generate.context.progress.text=Generating context for template ''{0}''...
 
-# Dialogs
+## Show Stats Action
+action.show.stats.text=Show Statistics
+action.show.stats.description=Show detailed statistics for selected section
+action.show.stats.progress=Loading Statistics — {0}
+action.show.stats.progress.text=Loading statistics for ''{0}''...
 
-## Output Preview Dialog
-dialog.output.action.copy=Copy to Clipboard
-dialog.output.listing.title=Listing — {0}
-dialog.output.context.title=Context — {0}
+## Show Context Stats Action
+action.show.context.stats.text=Show Context Statistics
+action.show.context.stats.description=Show detailed statistics for selected context
