--- a/lg-cfg/tags.yaml
+++ b/lg-cfg/tags.yaml
@@ -4,11 +4,17 @@ tag-sets:
     tags:
       core:
         title: "Ядро"
+      ui:
+        title: "Компонентная база UI"
       control:
         title: "Контрольная панель"
-      vfs:
-        title: "Virtual File Integration"
+      included-files:
+        title: "Included Files panel"
+      generate:
+        title: "Генерация (для просмотра)"
       catalog:
         title: "Catalog Services"
       cli:
         title: "CLI executable"
+      stats:
+        title: "Диалог статистики"
