Фаза 12: Grouped Table Component

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -83,6 +83,7 @@ src:
                             - "/models/ReportSchema.kt"
                             - "/services/state/LgPanelStateService.kt"
                             - "/ui/components/LgTaskTextField.kt"
+                            - "/ui/components/LgGroupedTable.kt"
                             - "/utils/LgFormatUtils.kt"
                         - condition: "TAGSET:intellij-plugin:included-files"
                           allow:
