--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -150,3 +150,18 @@ action.show.stats.progress.text=Loading statistics for ''{0}''...
 ## Show Context Stats Action
 action.show.context.stats.text=Show Context Statistics
 action.show.context.stats.description=Show detailed statistics for selected context
+
+## Show Included Files Action
+action.show.included.text=Show Included Files
+action.show.included.description=Load and display files included in selected section
+action.show.included.progress=Loading Included Files — {0}
+action.show.included.progress.text=Loading included files for section ''{0}''...
+
+## Toggle Tree View Mode Action
+action.toggle.view.text=Toggle View Mode
+action.toggle.view.description=Switch between tree and flat view modes
+
+# Included Files Panel
+
+## Empty State
+included.empty.text=No files to display. Click "Show Included" to load files.
