--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -72,6 +72,7 @@ control.btn.send.ai=Send to AI
 control.btn.generate.context=Generate Context
 control.btn.show.context.stats=Show Context Stats
 control.btn.configure.tags=Configure Tags
+control.btn.configure.tags.with.count=Configure Tags ({0})
 control.btn.show.included=Show Included
 control.btn.generate.listing=Generate Listing
 control.btn.show.stats=Show Stats
@@ -160,6 +161,15 @@ action.show.included.progress.text=Loading included files for section ''{0}''...
 ## Toggle Tree View Mode Action
 action.toggle.view.text=Toggle View Mode
 action.toggle.view.description=Switch between tree and flat view modes
+
+# Tags Dialog (Phase 13)
+
+## Dialog Title
+dialog.tags.title=Configure Tags
+
+## Empty States
+dialog.tags.empty=No tag sets available. Check your lg-cfg/tags.yaml configuration.
+dialog.tags.set.empty=No tags in this set
 
 # Included Files Panel
 
