--- a/lg-cfg/tags.yaml
+++ b/lg-cfg/tags.yaml
@@ -18,3 +18,6 @@ tag-sets:
         title: "CLI executable"
       stats:
         title: "Диалог статистики"
+      tags-dialog:
+        title: "Диалог управления тегами"
+
