--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -67,6 +67,9 @@ control.mode.label=Mode:
 control.target.branch.label=Target Branch:
 control.task.placeholder=Describe current task
 
+## Empty States
+control.modes.empty=No mode-sets available
+
 ## Button Labels
 control.btn.send.ai=Send to AI
 control.btn.generate.context=Generate Context
