--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -120,6 +120,39 @@ stats.summary.template.title=Template Overhead
 stats.adapter.metrics.title=Adapter Metrics
 stats.raw.json.title=Raw JSON
 
+# Doctor Dialog
+
+## Dialog Title
+doctor.dialog.title=Listing Generator — Diagnostics
+
+## Summary Cards
+doctor.card.config=Config (lg-cfg)
+doctor.card.cache=Cache
+doctor.card.contexts=Contexts
+doctor.card.environment=Environment
+
+## Section Titles
+doctor.section.config.details=Config Details
+doctor.section.cache.details=Cache Details
+doctor.section.migrations=Applied Migrations
+doctor.section.raw.json=Raw JSON
+
+## Button Labels
+doctor.btn.refresh=Refresh
+doctor.btn.reset.cache=Reset Cache
+doctor.btn.bundle=Build Bundle
+doctor.btn.copy.json=Copy JSON
+
+## Progress Messages
+doctor.progress.refresh=Refreshing diagnostics...
+doctor.progress.reset.cache=Resetting cache...
+doctor.progress.bundle=Building diagnostic bundle...
+
+## Success Messages
+doctor.bundle.success.title=Bundle Created
+doctor.bundle.success.message=Diagnostic bundle written to:\n{0}
+doctor.copy.success=JSON copied to clipboard
+
 # Actions
 
 ## Refresh Catalogs Action
@@ -160,6 +193,22 @@ action.show.included.text=Show Included Files
 action.show.included.description=Load and display files included in selected section
 action.show.included.progress=Loading Included Files — {0}
 action.show.included.progress.text=Loading included files for section ''{0}''...
+
+## Doctor Diagnostics Action
+action.doctor.text=Run Diagnostics
+action.doctor.description=Run diagnostics and show Doctor dialog
+action.doctor.progress=Running Diagnostics...
+action.doctor.progress.text=Collecting diagnostic information...
+
+## Reset Cache Action
+action.reset.cache.text=Reset Cache
+action.reset.cache.description=Reset LG cache and rebuild
+action.reset.cache.confirm.title=Confirm Cache Reset
+action.reset.cache.confirm.message=This will clear the local LG cache and rebuild it.\n\nContinue?
+action.reset.cache.progress=Resetting Cache...
+action.reset.cache.progress.text=Rebuilding LG cache...
+action.reset.cache.success.title=Cache Reset
+action.reset.cache.success.message=Cache successfully reset and rebuilt
 
 ## Toggle Tree View Mode Action
 action.toggle.view.text=Toggle View Mode
