Фаза 15: Starter Config Wizard

--- a/lg-cfg/sections.yaml
+++ b/lg-cfg/sections.yaml
@@ -112,3 +112,10 @@ src:
                             - "/services/diagnostics/LgDiagnosticsService.kt"
                             - "/actions/LgResetCacheAction.kt"
                             - "/actions/LgRunDoctorAction.kt"
+                        - condition: "TAGSET:intellij-plugin:starter"
+                          allow:
+                            - "/ui/dialogs/LgInitWizardDialog.kt"
+                            - "/services/LgInitService.kt"
+                            - "/actions/LgCreateStarterConfigAction.kt"
+                            - "/actions/LgOpenConfigAction.kt"
+                            - "/models/InitResult.kt"
