--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -223,6 +223,50 @@ dialog.tags.title=Configure Tags
 dialog.tags.empty=No tag sets available. Check your lg-cfg/tags.yaml configuration.
 dialog.tags.set.empty=No tags in this set
 
+# Init Wizard Dialog
+
+## Dialog Title and Labels
+dialog.init.title=Create Starter Config
+dialog.init.description=Select a preset to initialize lg-cfg directory:
+dialog.init.preset.label=Preset:
+dialog.init.progress.title=Initializing lg-cfg...
+
+## Status Messages
+dialog.init.status.ready=Ready to initialize
+dialog.init.error.load.presets=Failed to load presets
+dialog.init.error.no.presets=No presets available
+
+## Success Messages
+dialog.init.success.title=Config Created
+dialog.init.success.message=Successfully created {0} file(s)
+dialog.init.success.overwritten=Successfully overwritten {0} file(s)
+
+## Error Messages
+dialog.init.error.title=Initialization Failed
+dialog.init.error.failed=Failed to initialize: {0}
+
+## Conflict Messages
+dialog.init.conflicts.title=Confirm Overwrite
+dialog.init.conflicts.message=lg-cfg already contains {0} file(s). Overwrite with --force?
+dialog.init.conflicts.overwrite=Overwrite
+dialog.init.conflicts.cancel=Cancel
+
+# Open Config Action
+
+## Action Labels
+action.open.config.text=Open Config
+action.open.config.description=Open lg-cfg/sections.yaml
+
+## Error Messages
+action.open.config.error.title=Error
+action.open.config.error.not.found=sections.yaml not found
+
+## Create Dialog
+action.open.config.create.title=lg-cfg Not Found
+action.open.config.create.message=lg-cfg/sections.yaml not found. Create starter config?
+action.open.config.create.yes=Create
+action.open.config.create.no=Cancel
+
 # Included Files Panel
 
 ## Empty State
