--- a/lg-cfg/tags.yaml
+++ b/lg-cfg/tags.yaml
@@ -24,4 +24,5 @@ tag-sets:
         title: "Панель режимов"
       diag:
         title: "Самодиагностика"
-
+      starter:
+        title: "Стартовая конфигурация"
