--- a/src/main/resources/messages/LgBundle.properties
+++ b/src/main/resources/messages/LgBundle.properties
@@ -69,6 +69,7 @@ control.task.placeholder=Describe current task
 
 ## Empty States
 control.modes.empty=No mode-sets available
+control.target.branch.no.git=No Git repository
 
 ## Button Labels
 control.btn.send.ai=Send to AI
